--- a/config/content.htm
+++ b/config/content.htm
@@ -693,7 +693,51 @@ def OnContextMenuCallback(self, tree, node, columnID):
         NXOpen.BlockStyler.Tree.NodeInsertOption.Sort)</pre>
 <h4>Tutorial:</h4>
 <p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=qeDgmwz-xQU">https://www.youtube.com/watch?v=qeDgmwz-xQU</a></p>
-<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a></p><h1>NX</h1>
+<p style="padding-left: 30px;"><a href="https://www.youtube.com/watch?v=Qo_A2lJEn0c">https://www.youtube.com/watch?v=Qo_A2lJEn0c</a></p>
+<h2>w10 任務</h2>
+<p>請各組員在下列影片中加入註解說明後, 分別以 w10_block_ui、w10_nx_integ 與 w10_ssh 作為標題, 將說明影片嵌入個人 cd2022 網站頁面 (設為 H2 或 H3) 及 blog 網誌中.</p>
+<p>w10_block_ui</p>
+<script>
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_block_ui" height="100%" muted="true" width="100%">
+<source src="/downloads/w10_block_ui/w10_block_ui.mp4" type="video/mp4"/></video></div>
+<p>w10_nx_integ</p>
+<script>
+var winkVideoData_w10_nx_integ = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_nx_integ" height="100%" muted="true" width="100%">
+<source src="/downloads/w10_nx_integ/w10_nx_integ.mp4" type="video/mp4"/></video></div>
+<p>w10_ssh</p>
+<script>
+var winkVideoData_w10_ssh = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/static" data-varname="winkVideoData_w10_ssh" height="100%" muted="true" width="100%">
+<source src="/downloads/w10_ssh/w10_ssh.mp4" type="video/mp4"/></video></div><h1>NX</h1>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/">https://www.plm.automation.siemens.com/global/en/products/nx/</a></p>
 <p><a href="https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html">https://www.plm.automation.siemens.com/global/en/products/nx/nx-for-design.html</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Siemens_NX">https://en.wikipedia.org/wiki/Siemens_NX</a></p>
@@ -1127,7 +1171,7 @@ for dim in workPart.Dimensions:</pre>
 <p></p>
 <h3>Python API</h3>
 <p>設定 NX Journal 存為 Python 的步驟為:</p>
-<p style="padding-left: 30px;">File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Jpurnal Language 設為 Python.</p>
+<p style="padding-left: 30px;">File -&gt; Preferences -&gt; User Interface -&gt; Tools -&gt; Journal 將 Journal Language 設為 Python.</p>
 <p>接著將 Quick Access Toolbar 中的 Menu 功能表開啟. 然後透過 Menu -&gt; Tools -&gt; Journal 選擇 Record, 將 Journal 檔案存至特定目錄區後, 開始錄製操作過程. 選擇 Stop 可以將操作過程存為 Python 程式. 選擇 Play 可以播放已經存檔案的 Python 程式. 選擇 Edit 則可編輯 Python API 程式.</p>
 <p>Create New Model Python API 程式:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import NXOpen
@@ -1181,8 +1225,7 @@ if __name__ == '__main__':
     main()
 </pre>
 <p>Tools -&gt; Expressions 可以列出所有 Expressions</p>
-<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p>
-<h3>AJAX</h3>
+<p>在零件繪製過程若將關鍵尺寸以 Expressions 變數命名後, 透過 Python API 進行操控, 並利用 Flask 讓該 Python 程式網際化, 之後再交由前端的 Brython 表單輸入所需要的零組件變數值, 由 AJAX 傳至後端將該零組件轉為 STL 或 STEP 格式後提供下載. 且將客製化後之零組件 PMI 資訊直接顯示在 Brython 前端. 將有助於提升各階段協同產品設計流程效益.</p><h3>AJAX</h3>
 <p>可以將下列 Server 端的 Flask 程式透過 NXOpen Python API 與 NX12、NX1980 或 NX2008 相連, 然後將 uarm 機械手臂所需要的零組件參數, 由 Brython 端輸入, 執行後的結果再傳回網際前端應用.</p>
 <p>Client 端的 Brython:</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false"># 從 browser 導入 document
