--- a/content/w10 任務.html
+++ b/content/w10 任務.html
@@ -146,12 +146,28 @@ img.add_border {
 <p>w10-1 任務執行步驟:</p>
 <ol>
 <li><a href="https://github.com/mdecycu/cd2022_guide/raw/main/downloads/w10_block_ui/w10_block_ui.wnk">下載 w10_block_ui.wnk</a></li>
-<li>利用 Wink 開啟專案 (Wink 3.0 與 3.01 相容性尚未測試)</li>
+<li>利用 Wink 開啟專案</li>
 <li>在各頁面加入說明標註</li>
 <li>若有其他附加頁面, 則需縮至 1008x630 後插入適當位置</li>
 <li>完成後轉出對應的 mp4 放入頁面與網誌</li>
 </ol>
 <p>w10_block_ui</p>
+<p>以下影片嵌入 html 內容 (採用的 <a href="https://github.com/mdecourse/cmsimde/commit/6b37ee43533ceae4ec9e3b0de3486364308dc54d">cmsimde 版本</a>):</p>
+<pre class="brush:html;auto-links:false;toolbar:false" contenteditable="false">&lt;script&gt;
+// 在 Javascript 標註內以兩個斜線加入單行註解
+// 每一個影片要有獨特的 data-varname 變數名稱
+var winkVideoData_w10_block_ui = {
+  dataVersion: 1,
+  frameRate: 10,
+  buttonFrameLength: 5,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+&lt;/script&gt;
+&lt;!-- 將 mp4 檔案從 downloads 目錄取出 --&gt;
+&lt;div class="winkVideoContainerClass" style="border: thin solid black; padding: 10px;"&gt;&lt;video width="100%" height="100%" autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="./../cmsimde/static" data-varname="winkVideoData_w10_block_ui" muted="true"&gt;
+&lt;source src="./../downloads/w10_block_ui/w10_block_ui.mp4" type="video/mp4" /&gt;&lt;/video&gt;&lt;/div&gt;</pre>
 <script>
 var winkVideoData_w10_block_ui = {
   dataVersion: 1,
